modified:   app.py 	new file:   static/css/admin.css 	modified:   templates/Base_etudiant.html 	new file:   templates/admin.html 	modified:   templates/base.html 	new file:   templates/base_admin.html 	new file:   templates/creer_quiz.html 	new file:   templates/passer_examen.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,14 +42,44 @@
     <main>
         <!-- Section Héro -->
         <section class="hero">
-            <div class="container">
-                <h2>Passez vos examens en ligne en toute sécurité</h2>
-                <p>EvalyQuiz vous offre une plateforme sécurisée et intuitive pour gérer et passer vos examens en ligne, où que vous soyez.</p>
-                <div class="hero-buttons">
-                    <a href="/inscription" class="btn btn-primary">Créer un compte</a>
-                    <a href="/about" class="btn btn-secondary">En savoir plus</a>
-                </div>
+                    <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="10000">
+            <img src="..." class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Création d'examens</h5>
+                <p>Créez facilement des examens en ligne avec des questions variées, des délais et des paramètres de sécurité personnalisables.</p>
             </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="2000">
+            <img src="..." class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Examen en temps réel</h5>
+                <p>Les étudiants passent leurs examens en ligne en toute sécurité, avec chronométrage automatique et contrôle des réponses en temps réel.</p>
+            </div>
+            </div>
+            <div class="carousel-item">
+            <img src="..." class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Analyse et rapports</h5>
+                <p>Obtenez des rapports détaillés sur les performances des candidats, les taux de réussite et identifiez les domaines à améliorer</p>
+            </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+        </div>
         </section>
 
         <!-- Espace pour le contenu dynamique -->
