modification de css

--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -3,6 +3,7 @@
 {% block title %}Inscription{% endblock %}
 
 {% block content %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/auth/styleRegister.css') }}">
 <div class="register-container">
     <h2>Inscription</h2>
     
