--- a/templates/enseignant/create_quiz.html
+++ b/templates/enseignant/create_quiz.html
@@ -3,6 +3,7 @@
 {% block title %}Créer un quiz{% endblock %}
 
 {% block content %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/enseignant/styleCreateQuiz.css') }}">
 <div class="form-container">
     <h2>Créer un quiz</h2>
     
