--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -3,6 +3,7 @@
 {% block title %}Connexion{% endblock %}
 
 {% block content %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/auth/styleLogin.css') }}">
 <div class="login-container">
     <h2>Connexion</h2>
     
