index css séparation des styles

--- a/templates/etudiant/results.html
+++ b/templates/etudiant/results.html
@@ -3,6 +3,7 @@
 {% block title %}Résultats du quiz{% endblock %}
 
 {% block content %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/etudiant/styleResult.css') }}">
 <div class="results-container">
     <h2>Résultats du quiz</h2>
     
